@@ -42,7 +42,8 @@ ButcherTableau::ButcherTableau(unsigned char _order, const Scalar* _a, const Sca
         c[x] = _c[x];
         if (fabs(checksum-c[x])>0.0001*(checksum+c[x]))
         {
-            Console::redBold<<"Error: Butcher tableau checksum is wrong!\n";
+            Console(Color::red, Format::bold)
+                <<"Error: Butcher tableau checksum is wrong!\n";
         }
     }
 }
