@@ -10,33 +10,14 @@
 
 using namespace SphereSim;
 
-InternalConsole::InternalConsole():color(Color::white), font(0)
+Console::Console()
+    :color(Color::white), font(0), stream()
 {
 }
 
-InternalConsole::InternalConsole(unsigned short c, unsigned short f):color(c), font(f)
+Console::Console(unsigned short c, unsigned short f)
+    :color(c), font(f), stream()
 {
 }
 
-QTextStream InternalConsole::console(stdout);
-
-InternalConsole Console::out;
-InternalConsole Console::bold(Color::white, 1<<Format::bold);
-
-InternalConsole Console::black(Color::black, 0);
-InternalConsole Console::red(Color::red, 0);
-InternalConsole Console::green(Color::green, 0);
-InternalConsole Console::yellow(Color::yellow, 0);
-InternalConsole Console::blue(Color::blue, 0);
-InternalConsole Console::magenta(Color::magenta, 0);
-InternalConsole Console::cyan(Color::cyan, 0);
-InternalConsole Console::white(Color::white, 0);
-
-InternalConsole Console::blackBold(Color::black, 1<<Format::bold);
-InternalConsole Console::redBold(Color::red, 1<<Format::bold);
-InternalConsole Console::greenBold(Color::green, 1<<Format::bold);
-InternalConsole Console::yellowBold(Color::yellow, 1<<Format::bold);
-InternalConsole Console::blueBold(Color::blue, 1<<Format::bold);
-InternalConsole Console::magentaBold(Color::magenta, 1<<Format::bold);
-InternalConsole Console::cyanBold(Color::cyan, 1<<Format::bold);
-InternalConsole Console::whiteBold(Color::white, 1<<Format::bold);
+std::mutex Console::mutex = {};
