@@ -19,6 +19,7 @@
 * Switched to custom hexadecimal message encoding.
 * Removed QStringList occurrences.
 * Removed unused include files.
+* Improved Console to use mutex locked std::cout output.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
